# linkage

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  Cargo.toml  LICENSE  README.md  bob.py  config.default.toml  config.example.toml  config.toml  install-rpi.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.sh
.cargo/: config.toml
.github/workflows/: cargo-clippy.yml  check.yml  publish-cockpit.yml  publish-parts.yml  publish.yml  release.yml  rust.yml  test.yml
carburetor/: Cargo.toml  README.md  carborator.service  carburator.service  carburetor.service  deploy-systemd.sh  deploy.sh
carburetor/src/: control_channel.rs  instruction.rs  main.rs
cockpit/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
cockpit/backend/: .gitignore  Cargo.toml  rustfmt.toml
cockpit/backend/src/: frontend.rs  gamepad.rs  linkage.rs  linkage_lib.rs  main.rs  settings.rs
cockpit/cockpit/: package.json  vite.config.ts
cockpit/cockpit/src-tauri/: Cargo.toml  tauri.conf.json
cockpit/cockpit/src-tauri/src/: linkage_lib.rs  main.rs
cockpit/cockpit/src/lib/backend/: backend-communication.ts  state.ts
cockpit/cockpit/src/lib/components/: EnableDisableRobotButton.svelte  Status.svelte  StatusItem.svelte
cockpit/cockpit/src/lib/components/logging/: LoggerOutput.svelte  Loggers.svelte
cockpit/cockpit/src/lib/style/: vars.scss
cockpit/frontend/web/: README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
cockpit/frontend/web/src/lib/: state.ts
cockpit/frontend/web/src/lib/backend/: connection.ts
cockpit/frontend/web/src/lib/client/: backend-state.ts  backend.ts  process-logger.ts
cockpit/frontend/web/src/lib/client/backend/: backend-communication.ts  backend.ts  message.ts  state.ts
cockpit/frontend/web/src/lib/client/robot-code/: state.ts
cockpit/frontend/web/src/lib/components/: Container.svelte  EnableDisableRobotButton.svelte  Logger.svelte  Status.svelte  StatusItem.svelte
cockpit/frontend/web/src/lib/components/logging/: LoggerOutput.svelte  Loggers.svelte
cockpit/frontend/web/src/lib/components/ui/: Button.svelte
cockpit/frontend/web/src/lib/server/: backend-process.ts
cockpit/frontend/web/src/lib/style/: app.scss  variables.scss
cockpit/frontend/web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
cockpit/frontend/web/src/routes/backend/start/: +server.ts
cockpit/frontend/web/src/types/: frontend-response.ts  logger-message.ts
cockpit/src/: App.svelte  main.ts
cockpit/src-tauri/: Cargo.toml  tauri.conf.json
cockpit/src-tauri/src/: config.rs  gamepad.rs  gauge.rs  linkage_lib.rs  main.rs
cockpit/src-tauri/src/commands/: config.rs  gamepad.rs  gauge.rs  linkage_lib.rs  mod.rs
cockpit/src/lib/: backend.ts  config.ts  gamepad-data.ts  logger.ts  process-logger.ts  state.ts
cockpit/src/lib/components/: Container.svelte  EnableDisableRobotButton.svelte  Sidebar.svelte  Status.svelte  StatusItem.svelte
cockpit/src/lib/components/gamepads/: GamepadControlStatus.svelte  Gamepads.svelte  GamepadsTab.svelte
cockpit/src/lib/components/logger/: CarburetorLoggerOutput.svelte  CockpitBackendLoggerOutput.svelte  LinkageLoggerOutput.svelte  LoggerOutput.svelte  Loggers.svelte
cockpit/src/lib/components/logging/: LinkageLoggerOutput.svelte  LoggerOutput.svelte  Loggers.svelte
cockpit/src/lib/components/overview/: EnableDisableRobotButton.svelte  OverviewTab.svelte
cockpit/src/lib/components/overview/logger/: LinkageLoggerOutput.svelte  LoggerOutput.svelte  Loggers.svelte
cockpit/src/lib/components/overview/status/: RobotServicesStatus.svelte  RobotSystemStatus.svelte  StatusContainer.svelte  StatusItem.svelte
cockpit/src/lib/components/settings/: SettingsTab.svelte
cockpit/src/lib/components/status/: RobotServicesStatus.svelte  RobotSystemStatus.svelte  Status.svelte  StatusContainer.svelte  StatusItem.svelte
cockpit/src/lib/components/ui/: Button.svelte  List.svelte
cockpit/src/lib/state/: gamepad.ts  logger.ts  robot-code.ts
cockpit/src/lib/style/: app.scss  vars.scss
cockpit/src/lib/types/: status.ts  system-info.d.ts  tab.d.ts
common/: Cargo.toml
common/config/: Cargo.toml
common/config/src/: lib.rs
common/logging/: Cargo.toml
common/logging/src/: lib.rs
common/message_derive/: Cargo.toml
common/message_derive/src/: lib.rs
common/messaging/: Cargo.toml
common/messaging/src/: error.rs  lib.rs
common/src/: config.rs  lib.rs  logging.rs  service_info.rs  system_info.rs
common/src/messages/: error.rs  mod.rs  runtime.rs
common/system_info/: Cargo.toml
common/system_info/src/: lib.rs
examples/: README.md
examples/config/: config.default.toml  config.local.default.toml  config.pi.default.toml  config.toml
examples/lib/linkage-node/: .gitignore  README.md  deploy.sh  package.json  tsconfig.json
examples/lib/linkage-node/src/: main.ts
gauge/: Cargo.toml  README.md  deploy.sh  gauge.service
gauge/src/: lib.rs  main.rs  system.rs
lib/: linkage.socket  linkage@.service
lib/linkage-node/: .gitignore  package.json  tsconfig.json
lib/linkage-node/src/: index.ts
lib/linkage-node/src/carburetor/: carburetor_connection.ts
lib/linkage-node/src/cockpit/: cockpit_connection.ts
lib/linkage-node/src/config/: config.ts  config_manager.ts
lib/linkage-node/src/gamepad/: codes.ts  gamepad_manager.ts  index.ts  ps_controller.ts
lib/linkage-node/src/logger/: logger.ts
lib/linkage-node/src/motor/: index.ts  spark_motor.ts
lib/linkage-node/src/robot/: robot.ts
lib/linkage-node/src/subsystem/: index.ts  subsystem.ts
lib/linkage-node/src/util/: util.ts
lib/linkage-rs/: Cargo.toml  deploy.sh
lib/linkage-rs/examples/: simple_tankdrive.rs
lib/linkage-rs/src/: carburetor.rs  cockpit.rs  gamepad.rs  lib.rs  prelude.rs  robot.rs  state.rs  subsystem.rs
lib/linkage-rs/src/gamepads/: gamepad.rs  gamepad_manager.rs  mod.rs  ps_controller.rs
lib/linkage-rs/src/motors/: mod.rs  spark_motor_controller.rs
runtime/: Cargo.toml  deploy.sh
runtime/src/: main.rs  processes.rs  settings.rs  state.rs
