[workspace]
members = ["carburetor", "gauge", "cockpit/src-tauri", "lib/linkage-rs", "common", "common/system_info", "common/config", "common/message_derive"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Koen Westendorp <koensswestendorp@gmail.com>",
    "Bauke Westendorp <baukewestendorp@gmail.com>",
]
