[workspace]
members = [
    "carburetor",
    "gauge",
    "cockpit/src-tauri",
    "lib/linkage-rs",
    "common/messaging",
    "common/message_derive",
    "common/logging",
    "common/system_info",
    "common/config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Koen Westendorp <koensswestendorp@gmail.com>",
    "Bauke Westendorp <baukewestendorp@gmail.com>",
]
