[workspace]
members = [
    "carburetor",
    "gauge",
    "cockpit/src-tauri",
    "lib/linkage-rs",
    "common/messaging",
    "common/message_derive",
    "common/logging",
    "common/system_info",
    "common/config",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Impossible-Robotics-5412/linkage"
authors = [
    "Koen Westendorp <koensswestendorp@gmail.com>",
    "Bauke Westendorp <baukewestendorp@gmail.com>",
]