[package]
name = "carburetor"
version.workspace = true
edition.workspace = true
authors.workspace = true
  
[dependencies]
simple-signal = "1.1.1"
common = { path = "../common", features = ["logging", "messages", "config"]}
log = "0.4.17"

[target.'cfg(all(target_arch = "arm", target_os = "linux", target_env = "gnu"))'.dependencies]
rppal = "0.14.1"
