[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
logging = ["config", "dep:log", "dep:fern", "dep:ws", "dep:bus"]
config = ["dep:config", "dep:xdg", "dep:serde", "dep:serde_json"]
messages = ["dep:message_derive"]
system_info = ["dep:home", "dep:systemstat", "dep:serde", "dep:serde_json"]

[dependencies]
config = { version = "0.13.3", features = ["toml"], optional = true }
serde = { version = "1.0.152", optional = true }
xdg = { version = "2.4.1", optional = true }
message_derive = { path = "message_derive", optional = true }
log = { version = "0.4.17", optional = true }
fern = { version = "0.6.2", optional = true }
ws = { version = "0.9.2", optional = true }
bus = { version = "2.4.0", optional = true }
serde_json = { version = "1.0.95", optional = true }
systemstat = { version = "0.2.3", optional = true }
home = { version = "0.5.4", optional = true }
