[package]
name = "gauge"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
messaging = { path = "../common/messaging" }
system_info = { path = "../common/system_info"}
config = { path = "../common/config"}

crossbeam = "0.8.2"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
systemstat = "0.2.3"
