[package]
name = "cockpit-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", features = ["toml"] }
gilrs = "0.10.1"
serde = "1.0.152"
simple-signal = "1.1.1"
ws = "0.9.2"
xdg = "2.4.1"
