[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config_crate = { version = "0.13.3", package = "config", features = ["toml"] }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.95" }
xdg = { version = "2.4.1" }
