[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
log = { version = "0.4.17" }
fern = { version = "0.6.2" }
ws = { version = "0.9.2" }
bus = { version = "2.4.0" }
serde = { version = "1.0.160" }
serde_json = { version = "1.0.96" }