[package]
name = "logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }

log = "0.4.17"
fern = "0.6.2"
ws = "0.9.2"
serde = "1.0.160"
serde_json = "1.0.96"
crossbeam = "0.8.2"