[package]
name = "messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message_derive = { path = "../message_derive" }

serde = { version = "1.0.160", features = ["derive"] }