[package]
name = "system_info"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
systemstat = "0.2.3"
home = "0.5.4"
